--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       , "underscore.string": "2.x.x"
       , "express": "3.x.x"
       , "ejs": "0.8.x"
-      , "websocket": "1.x.x"
+      , "socket.io": "0.9.x"
     }
   , "devDependencies": {
         "jasmine-node": "*"
