--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
       , "socket.io": "0.9.x"
     }
   , "devDependencies": {
-        "jasmine-node": "*"
+        "mocha": "*"
       , "coffee-script": "*"
     }
   , "scripts": {
-        "start": "make clean all && node server.js"
-      , "test": "node_modules/jasmine-node/bin/jasmine-node spec"
+        "start": "make clean all && node app.js"
+      , "test": "node_modules/.bin/mocha test"
     }
   , "engines": {
         "node": "0.10.x"
