--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       , "ejs": "0.8.x"
       , "socket.io": "0.9.x"
       , "npm" : "1.x.x"
+      , "coffee-script" : "*"
     }
   , "devDependencies": {
         "mocha": "*"
