--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     }
   , "devDependencies": {
         "mocha": "*"
+      , "chai": "*"
       , "spooky": "*"
       , "coffee-script": "*"
     }
