--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
       , "coffee-script": "*"
     }
   , "scripts": {
-        "start": "make clean all && node app/app.js"
+        "start": "make clean all && node app.js"
       , "test": "make clean all && node_modules/.bin/mocha test -t 100000"
     }
   , "engines": {
